--- a/docs/styles.css
+++ b/docs/styles.css
@@ -52,6 +52,7 @@ html {
 body {
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     height: 100vh;
     background-color: var(--slate-300);
