--- a/docs/styles.css
+++ b/docs/styles.css
@@ -26,12 +26,12 @@
     --slate-500: hsl(216, 15%, 48%);
     --slate-900: hsl(218, 44%, 22%);
     --attribution-anchor: hsl(228, 45%, 44%);
-    --font-size-large: 1.5rem;
-    --font-size-medium: 1rem;
-    --font-size-small: 0.5rem;
+    --font-size-large: 1.2rem;
+    --font-size-medium: 0.875rem;
+    --font-size-small: 0.50rem;
     --font-weight-regular: 400;
     --font-weight-bold: 700;
-    --border-radius-normal: 1.25rem;
+    --border-radius-normal: 1.50rem;
 }
 
 /* css reset */
@@ -45,10 +45,6 @@ img {
     width: 100%;
     border-radius: var(--border-radius-normal);
     margin-bottom: 1rem;
-}
-
-html {
-    font-size: 50%;
 }
 
 body {
@@ -70,7 +66,7 @@ footer {
     width: 100%;
     position: absolute;
     bottom: 0;
-    margin: 2rem;
+    margin: 1rem;
     text-align: center;
 }
 
@@ -87,11 +83,14 @@ footer {
 
 
 .qr-frontendmentor-home {
-    width: 24rem;
-    height: 39rem;
+    width: 18rem;
+    height: 28rem;
     background-color: var(--white);
-    padding: 1rem;
+    padding: 0.75rem;
     border-radius: var(--border-radius-normal);
+    /*fallack box-shadow property for old browsers*/
+    -webkit-box-shadow: 2px 9px 15px 1px rgba(0,0,0,0.12); 
+    box-shadow: 2px 9px 15px 1px rgba(0,0,0,0.12);
 }
 
 .text-container {
@@ -112,19 +111,22 @@ footer {
 
 /* desktop (1440px) */
 @media (min-width: 1440px) {
-    html {
-        font-size: 100%;
-    }
 
     .qr-frontendmentor-home {
-        height: 36rem;
+        width: 36rem;
+        height: 54rem;
+        padding: 1.5rem;
+    }
+
+    .text-container p:nth-child(1) {
+        font-size: 2.4rem;
     }
 
     .text-container p:nth-child(2) {
-        padding: 1rem;
+        font-size: 1.75rem;
+    }
+
+    footer p {
+        font-size: 1rem;
     }
 }
-
-
- 
-
