--- a/docs/styles.css
+++ b/docs/styles.css
@@ -57,7 +57,7 @@ body {
 }
 
 p {
-    font-family: "Outfit", "san-serif";
+    font-family: "Outfit", "sans-serif";
     text-align: center;
     margin-bottom: 0.75rem;
 }
@@ -80,6 +80,17 @@ footer {
         color: var(--attribution-anchor);
     }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
 
 .qr-frontendmentor-home {
     width: 18rem;
@@ -108,8 +119,8 @@ footer {
         color: var(--slate-500);
     }
 
-/* desktop (min 1440px) */
-@media (min-width: 1440px) {
+/* desktop (min-width 1440px) */
+@media (min-width: 90rem) {
 
     .qr-frontendmentor-home {
         width: 36rem;
