--- a/docs/styles.css
+++ b/docs/styles.css
@@ -21,33 +21,32 @@
 
 /* custom variables */
 :root {
-    --white: hsl(0, 0%, 100%);
-    --slate-300: hsl(212, 45%, 89%);
-    --slate-500: hsl(216, 15%, 48%);
-    --slate-900: hsl(218, 44%, 22%);
-    --attribution-anchor: hsl(228, 45%, 44%);
-    --font-size-large: 1.2rem;
-    --font-size-medium: 0.875rem;
-    --font-size-small: 0.50rem;
-    --font-weight-regular: 400;
-    --font-weight-bold: 700;
-    --border-radius-normal: 1.50rem;
-    --box-shadow: 2px 9px 15px 1px rgba(0,0,0,0.12);
+  --white: hsl(0, 0%, 100%);
+  --slate-300: hsl(212, 45%, 89%);
+  --slate-500: hsl(216, 15%, 48%);
+  --slate-900: hsl(218, 44%, 22%);
+  --attribution-anchor: hsl(228, 45%, 44%);
+  --font-size-large: 1.2rem;
+  --font-size-medium: 0.875rem;
+  --font-size-small: 0.50rem;
+  --font-weight-regular: 400;
+  --font-weight-bold: 700;
+  --border-radius: 1.25rem;
+  --box-shadow: 2px 9px 15px 1px rgba(0,0,0,0.12);
 }
 
 /* css reset */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 img {
-    width: 100%;
-    border-radius: var(--border-radius-normal);
-    margin-bottom: 1rem;
+  width: 100%;
 }
 
+/*utility classes*/
 .sr-only {
   position: absolute;
   width: 1px;
@@ -61,80 +60,85 @@ img {
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-    background-color: var(--slate-300);
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  background-color: var(--slate-300);
 }
 
 p {
-    font-family: "Outfit", sans-serif;
-    text-align: center;
-    margin-bottom: 0.75rem;
+  margin-bottom: 0.75rem;
+  font-family: "Outfit", sans-serif;
+  text-align: center;
 }
 
 footer {
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    margin: 1rem;
-    text-align: center;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  margin: 1rem;
+  text-align: center;
 }
 
-footer p {
+  footer p {
     display: inline-block;
     text-align: center;
     font-size: var(--font-size-small);
-}
+  }
 
-footer a {
+  footer a {
     color: var(--attribution-anchor);
-}
+  }
 
 .qr-frontendmentor-home {
-    width: 18rem;
-    height: 28rem;
-    background-color: var(--white);
-    padding: 0.75rem;
-    border-radius: var(--border-radius-normal);
-    box-shadow: var(--box-shadow);
+  width: 18rem;
+  height: 28rem;
+  padding: 0.75rem;
+  border-radius: var(--border-radius);
+  background-color: var(--white);
+  box-shadow: var(--box-shadow);
+}
+
+  .qr-frontendmentor-home img {
+    margin-bottom: 1rem;
+    border-radius: var(--border-radius);
 }
 
 .text-container {
-    padding: 0 1.2rem;
+  padding: 0 1.2rem;
 }
 
-    .text-container p:nth-child(1) {
-        font-weight: var(--font-weight-bold);
-        font-size: var(--font-size-large);
-        color: var(--slate-900);
-    }
+  .text-container p:nth-child(1) {
+    font-weight: var(--font-weight-bold);
+    font-size: var(--font-size-large);
+    color: var(--slate-900);
+}
 
-    .text-container p:nth-child(2) {
-        font-weight: var(--font-weight-regular);
-        font-size: var(--font-size-medium);
-        color: var(--slate-500);
-    }
+  .text-container p:nth-child(2) {
+    font-weight: var(--font-weight-regular);
+    font-size: var(--font-size-medium);
+    color: var(--slate-500);
+}
 
 /* desktop (min-width 1440px) */
 @media (min-width: 90rem) {
-    footer p {
-        font-size: 1rem;
+  footer p {
+    font-size: 1rem;
+  }
+
+  .qr-frontendmentor-home {
+    width: 36rem;
+    height: 54rem;
+    padding: 1.5rem;
     }
 
-    .qr-frontendmentor-home {
-        width: 36rem;
-        height: 54rem;
-        padding: 1.5rem;
+  .text-container p:nth-child(1) {
+    font-size: 2.4rem;
     }
 
-    .text-container p:nth-child(1) {
-        font-size: 2.4rem;
-    }
-
-    .text-container p:nth-child(2) {
-        font-size: 1.75rem;
+  .text-container p:nth-child(2) {
+    font-size: 1.75rem;
     }
 }
